test_data/typeerror/core-21734.py
timediff = timestamp - self._previous_timestamp
self._state = diff / timediff * 3600